201x-xx-xx:

2016-02-28:
    * @kmorihiro fixed background color theming for statusline
    * @kmorihiro fixed broken (hidden) hints
    * @gkatsev fixed some validator warnings
    * @quicksaver various findbar fixes
    * @quicksaver various tabview fixes for firefox 45
    * @mnphnic expose some properies globally that were hidden because of const/let transition
    * @SammysHP added a statuslinevisibility option. Also called slv.
      The three options are `auto`, `visible`, and `hidden`.
      The setVisibility method can take an enum of UPDATE, SHOW, HIDE, or TOGGLE, where toggle switches between all modes.
    * @quicksaver updated findbar to remember searches globally
    * @mnphnic make some globally exposed properties enumerable

2016-01-30:
    * Expose Buffer constructor
    * Fix scrolling on some pages with gg/G/<C-d>/<C-u>
    * Make sure to get latest content separator in setVisibility
    * Expose Command constructor

2016-01-26:
    * QuickMarks: new mapping [m]gw{a-z}[m] to open Quickmark in a new window as the single open tab 
    * :delmacro matches the syntax and behaviour of :delqmark, e.g. allowing ranges as argument
    * Stop propagation for keyboard event if that key are contained in -except option on :ignorekeys
    * Improvements in handling Esc for unfocusing text fields
    * Closing the last tab of a window now respects the Firefox setting:
    browser.tabs.closeWindowWithLastTab, which means those who are used to :tabclose never closing
    the window when closing the last tab, should set this option to false (either through about:config
    or with :set! browser.tabs.closeWindowWithLastTab=false)
    * Added setting for controlling if keypresses are passed to webpages when
    outside of Insert/Passthrough modes (to revert to old setting,
    :set passthrough=true)
    * gr toggles Reader View
    * Autohide statusbar: When entering fullscreen mode, the statusbar is